--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" dir="ltr">
 <head>
-    <!-- 🔧 Metadados Básicos -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Fogo Norte Extintores - Venda, Recarga e Manutenção no Pará</title>
-    <meta name="description" content="A Fogo Norte Extintores é referência no Pará em venda, recarga e manutenção de extintores de incêndio. Empresa credenciada pelo Inmetro e Corpo de Bombeiros.">
-    <meta name="keywords" content="Fogo Norte, venda de extintores, recarga de extintor, manutenção de extintores, empresa de extintores Inmetro, extintores, extintor de incêndio, extintores certificados, segurança contra incêndio, Fogo Norte Extintores">
-    <meta name="author" content="Fogo Norte Extintores">
-    <meta name="robots" content="index, follow">
-    <meta name="theme-color" content="#b22222">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+     <!-- Verificação do Google Search Console -->
+    <meta name="google-site-verification" content="uKLH27n7p8OLaLVLrGAJupkW5IOvoGZt3LBB06uYZ5A" />
+    
     <!-- 🧭 SEO Técnico -->
     <link rel="canonical" href="https://fogonorteextintores.com.br">
     <meta name="format-detection" content="telephone=no">
@@ -20,6 +15,9 @@
     <meta name="geo.placename" content="Paragominas, Pará">
     <meta name="geo.position" content="-3.0025;-47.3527">
     <meta name="ICBM" content="-3.0025, -47.3527">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="image/LogoRedonda.png">
 
     <!-- 🌐 Open Graph (Facebook, WhatsApp, etc.) -->
     <meta property="og:title" content="Fogo Norte Extintores - Venda, Recarga e Manutenção no Pará">
@@ -31,70 +29,24 @@
     <meta property="og:locale" content="pt_BR">
     <meta property="og:site_name" content="Fogo Norte Extintores">
 
-    <!-- 🐦 Twitter Cards -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Fogo Norte Extintores - Venda e Recarga no Pará">
-    <meta name="twitter:description" content="Venda, recarga e manutenção de extintores de incêndio. Credenciada pelo Inmetro e Corpo de Bombeiros do Pará.">
-    <meta name="twitter:image" content="https://fogonorteextintores.com.br/image/LogoNomeIcone.png">
-    <meta name="twitter:image:alt" content="Logo Fogo Norte Extintores">
 
-    <!-- 🎨 FAVICON CORRIGIDO - Estrutura simplificada e funcional -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="manifest" href="/site.webmanifest">
-    <meta name="msapplication-TileColor" content="#b22222">
-    <meta name="theme-color" content="#b22222">
+    <!-- Fontes Google -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&amp;family=Poppins:wght@300;400;500;600;700&amp;display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&amp;family=Poppins:wght@300;400;500;600;700&amp;display=swap">
+    </noscript>
 
-    <!-- 🧩 Schema.org / LocalBusiness -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "LocalBusiness",
-        "name": "Fogo Norte Extintores",
-        "image": "https://fogonorteextintores.com.br/image/LogoNomeIcone.png",
-        "@id": "https://fogonorteextintores.com.br",
-        "url": "https://fogonorteextintores.com.br",
-        "telephone": "+55 91 99217-3520",
-        "priceRange": "$$",
-        "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "R. Barão Araruna - Promissão III",
-            "addressLocality": "Paragominas",
-            "addressRegion": "PA",
-            "postalCode": "68628-300",
-            "addressCountry": "BR"
-        },
-        "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": -3.0025,
-            "longitude": -47.3527
-        },
-        "areaServed": [
-            "Paragominas",
-            "Belém",
-            "Mãe do Rio",
-            "Dom Eliseu",
-            "Ulianópolis",
-            "Ipixuna do Pará",
-            "Marabá",
-            "Castanhal",
-            "Ananindeua",
-            "Santarém",
-            "Estado do Pará"
-        ],
-        "openingHours": "Mo-Fr 08:00-18:00",
-        "description": "Empresa especializada em venda, recarga e manutenção de extintores de incêndio, credenciada pelo Inmetro e Corpo de Bombeiros do Pará."
-    }
-    </script>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- 💨 Performance -->
-    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
-    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="preload" href="image/LogoNomeIcone.png" as="image">
-    <link rel="preload" href="imageExtintores/extintorescapa.png" as="image">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
 
     <style>
         :root {
