--- a/index.html
+++ b/index.html
@@ -1714,7 +1714,7 @@
         <div class="container">
             <nav class="nav-container" aria-label="Navegação principal">
                 <div class="logo">
-                    <img src="image/Logofav.png" alt="Fogo Norte Extintores" class="logo-img" width="50" height="50">
+                    <img src="image/LogoRedonda.png" alt="Fogo Norte Extintores" class="logo-img" width="50" height="50">
                     <div class="logo-text">Fogo Norte<span> Extintores</span></div>
                 </div>
                 <ul class="nav-menu">
